[package]
name = "perfgate-paired"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Paired benchmarking statistics for A/B comparison"
readme = "README.md"
keywords = ["paired", "benchmarking", "statistics", "ab-testing"]
categories = ["mathematics", "development-tools"]

[dependencies]
perfgate-types.workspace = true
perfgate-stats.workspace = true
perfgate-error.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1.7"
approx = "0.5"