[package]
name = "perfgate-stats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Statistical functions for benchmarking analysis"
readme = "README.md"
documentation = "https://docs.rs/perfgate-stats"
keywords = ["statistics", "median", "percentile", "benchmarking"]
categories = ["mathematics", "development-tools"]

[dependencies]
perfgate-types.workspace = true
perfgate-error.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest = "1.7"
approx = "0.5"
criterion = "0.5"

[[bench]]
name = "stats_bench"
harness = false
