[package]
name = "perfgate-summary"
description = "Summarization logic for perfgate comparison receipts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
authors.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
glob.workspace = true
perfgate-types.workspace = true

[dev-dependencies]
tempfile = "3"
