[package]
name = "perfgate-types"
description = "Shared types and schemas for perfgate receipts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
schemars.workspace = true

[dev-dependencies]
insta.workspace = true
serde_json.workspace = true
