[package]
name = "perfgate-types"
description = "Receipt types and JSON schemas for perfgate performance budgets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["performance", "benchmarking", "schema", "receipts", "baseline"]
categories = ["development-tools", "data-structures"]

[features]
default = []
arbitrary = ["dep:arbitrary"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
arbitrary = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
insta.workspace = true
toml.workspace = true
proptest = "1"
proptest-derive = "0.4"
